@@ -11,6 +11,7 @@ Version 1.3.1 (2005-04-??)
   takes third useMainThread argument to change this behavior.
   Effectively a complete rewrite which should be more correct
   and stable, also synchronized with mach_* 1.1.
+  XXX: Still doesn't work with Darwin 8!
 
 - Removed NSAutoreleasePool category hack that has been deprecated for
   quite some time.
